0.9.4 - May 26, 2014
 * improved XML downloading
 * added 4 channel water level displaying
 * allow portal to be chosen from first run screen
 * removed Commands option from overflow menu, changed to Date/Time
 * get software version is added to the Commands Page
 * added humidity expansion
 * code cleanup
 
0.9.5 - June 21, 2014
 * added in pwm override control
 * added in calibration commands
 * added in flags page to display Status and Alert flags
 * added in auto refresh after a command or pwm override update
 * improved Vortech popup
 ** shows a slider for speed and duration
 ** popup starts with current values instead of defaulting to 0
 * code cleanup
 
1.0 - August 20, 2014
 * added in basic webserver authentication mechanism for v1.1.1 libraries
 * switched the position of Commands page and Flags Page
 * added in Notifications for Water Level 1-4 and Humidity
 * added in 16 channel pwm support
 * removed ActionBarSherlock and ViewPagerIndicator library dependencies
 * switched to use OkHttp library for network function calls
 * changed minsdk to 7 (was 5), which is Android 2.1
 * improved error messages
 * added the ability to display the error log file
 * added preference to keep screen on when displaying the main screen
 * code cleanup and bug fixes
 
2.0 - June 5, 2015
 * Added Custom Variable value updating
 * Fixed AI display bug and channel swap
 * Migrated to Toolbar from Actionbar
 * Added in DC Pump page 
 * Added in a Navigation drawer
 * Fixed RA DDNS communication error
 * Changed app theme to be a light theme
 * Improved material theme
 * Changed minsdk to 15
 * Updated the app logo
 * Added a Setup Wizard to help configure the app
 * Migrated from Eclipse to Android Studio
 * Switched to using Fragments
 * Improved displaying changelog
 * Code cleanup

2.1 - November 26, 2017
 * Added initial RA Star support
 * Added support for PAR expansion module
 * Updated code libraries
 * Code cleanup

2.2 - ?
 * Changed the way the Back button operates