@@ -30,7 +30,7 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 208
+        versionCode 209
         versionName '2.2.0'
     }
     buildTypes {
