@@ -253,3 +253,6 @@ Changelog of all the versions of AndroidStatus
 
 2.2 - ?
  * Changed the way the Back button operates
+ * Improved XML processing of labels and values (Added sanity checks for array indices)
+ * Added initial graphing/chart support (Date range does not work currently)
+ * Added ability to export the raw history sqlite3 database (exports to logging folder)
